--- a/templates/index.html
+++ b/templates/index.html
@@ -51,12 +51,13 @@
                 {% for book in books %}
                 <div class="col-md-4">
                     <div class="card book-card">
-                        <img src="{{ book.image_url }}" class="card-img-top" alt="{{ book.title }}">
+                        <img src="{{ url_for('static', filename='images/default_book_cover.jpg') }}" 
+                             class="card-img-top" alt="{{ book.title }}">
                         <div class="card-body">
                             <h5 class="card-title">{{ book.title }}</h5>
-                            <p class="card-text">{{ book.author }}</p>
+                            <p class="card-text">By {{ book.author }}</p>
                             <p class="card-text text-primary fw-bold">${{ book.price }}</p>
-                            <a href="/product/{{ book.id }}" class="btn btn-outline-primary w-100">View Details</a>
+                            <a href="/book/{{ book.id }}" class="btn btn-outline-primary w-100">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -64,7 +65,7 @@
             </div>
         </div>
     </section>
-
+    
     <!-- Footer -->
     <footer class="bg-dark text-white py-4">
         <div class="container text-center">
