--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,28 @@ body {
 }
 
 /* Featured Books */
+/* Placeholder for missing book images */
+.placeholder-img {
+    position: relative;
+    width: 100%;
+    height: 250px; /* Set height for uniformity */
+    overflow: hidden;
+}
+
+.placeholder-img img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.placeholder-img .grey-square {
+    background-color: #ccc; /* Light grey color */
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 5px;
+}
+
 .featured-books h2 {
     color: #343a40;
 }
