--- a/templates/order_confirmation.html
+++ b/templates/order_confirmation.html
@@ -36,12 +36,12 @@
             Thank you for your purchase!
         </div>
         <h3>Order Details</h3>
-        <p><strong>Order ID:</strong> {{ order.order_id }}</p>
-        <p><strong>Date:</strong> {{ order.order_date }}</p>
-        <p><strong>Total:</strong> ${{ order.total_amount }}</p>
+        <p><strong>Order ID:</strong> {{ Orderss.order_id }}</p>
+        <p><strong>Date:</strong> {{ Orderss.order_date }}</p>
+        <p><strong>Total:</strong> ${{ Orderss.total_amount }}</p>
         <h4>Items:</h4>
         <ul class="list-group">
-            {% for item in order.items %}
+            {% for item in Orderss.items %}
             <li class="list-group-item">
                 <strong>{{ item.title }}</strong> - {{ item.quantity }} x ${{ item.unit_price }}
             </li>
